Bug 1708673 - Do not recreate CacheEntry when OPEN_READONLY flag is passed r=necko-reviewers,dragana

This bug is caused by two cache visitors working in parallel:
Visitor1: calls asyncDoomURI
Visitor2: calls asyncOpenURI

This causes CacheStorageService::AddStorageEntry to create a new entry and add
it to the hashtable:
https://searchfox.org/mozilla-central/rev/308ea44d0d60b391b031ccee695920bd543f7d2f/netwerk/cache2/CacheStorageService.cpp#1566,1574,1576

Visitor3: will then go through the hashtable and see the newly added entry.

Differential Revision: https://phabricator.services.mozilla.com/D118344