netwerk/cache2/CacheStorage.cpp
@@ -49,8 +49,6 @@ NS_IMETHODIMP CacheStorage::AsyncOpenURI(nsIURI* aURI,
 
   nsresult rv;
 
-  bool truncate = aFlags & nsICacheStorage::OPEN_TRUNCATE;
-
   nsCOMPtr<nsIURI> noRefURI;
   rv = NS_GetURIWithoutRef(aURI, getter_AddRefs(noRefURI));
   NS_ENSURE_SUCCESS(rv, rv);
@@ -61,10 +59,11 @@ NS_IMETHODIMP CacheStorage::AsyncOpenURI(nsIURI* aURI,
 
   RefPtr<CacheEntryHandle> entry;
   rv = CacheStorageService::Self()->AddStorageEntry(
-      this, asciiSpec, aIdExtension,
-      truncate,  // replace any existing one?
-      getter_AddRefs(entry));
-  NS_ENSURE_SUCCESS(rv, rv);
+      this, asciiSpec, aIdExtension, aFlags, getter_AddRefs(entry));
+  if (NS_FAILED(rv)) {
+    aCallback->OnCacheEntryAvailable(nullptr, false, rv);
+    return NS_OK;
+  }
 
   // May invoke the callback synchronously
   entry->Entry()->AsyncOpen(aCallback, aFlags);
@@ -90,7 +89,7 @@ NS_IMETHODIMP CacheStorage::OpenTruncate(nsIURI* aURI,
   RefPtr<CacheEntryHandle> handle;
   rv = CacheStorageService::Self()->AddStorageEntry(
       this, asciiSpec, aIdExtension,
-      true,  // replace any existing one
+      nsICacheStorage::OPEN_TRUNCATE,  // replace any existing one
       getter_AddRefs(handle));
   NS_ENSURE_SUCCESS(rv, rv);
 
